# motivate

./: .gitignore  README.md
maze-app/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.motivate-mazeapp
maze-app/components/buffers/: CMakeLists.txt  float_buffer.cpp  float_buffer.h
maze-app/components/mot_mqtt_client/: CMakeLists.txt  component.mk  mot_client.c  mot_client2.c  mot_mqtt_aws_client.c  mot_mqtt_client.c
maze-app/components/mot_mqtt_client/includes/: mot_client.h  mot_client2.h  mot_mqtt_aws_client.h  mot_mqtt_client.h
maze-app/components/tfmicro/: CMakeLists.txt
maze-app/components/utilities/: CMakeLists.txt  maze_utils.c
maze-app/components/utilities/includes/: maze_utils.h
maze-app/components/widgets/: CMakeLists.txt  maze.c  plots.c
maze-app/components/widgets/includes/: maze.h  plots.h
maze-app/main/: CMakeLists.txt  app_wifi.c  button_handler.c  details_tab.c  etch_tab.c  game_tab.c  globals.c  imu_task.c  main.c  maze_client.c  maze_tab.c  model.cc  mot-imu-model.cc  mot-imu-tf.cpp  plot_tab.c  pred_tab.c  tfl-example.cpp  tilt_maze_tab.c  train_tab.c
maze-app/main/includes/: app_wifi.h  arrow-img-30x30.h  details_tab.h  etch_tab.h  game_tab.h  globals.h  imu_task.h  maze_client.h  maze_tab.h  mot-imu-tf.h  motivate_math.h  plot_tab.h  pred_tab.h  tfl-example.h  tilt_maze_tab.h  train_tab.h
testcanvas/: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.motivate-testcanvas
testcanvas/components/core2forAWS/: .CMakeLists.txt.swp
testcanvas/main/: CMakeLists.txt  button_handler.c  imu.c  main.c  test.c
testcanvas/main/includes/: button_handler.h  imu.h  motivate_math.h  test.h
